<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorLogo"
        android:fontFamily="sans-serif-medium"
        android:gravity="center_horizontal"
        android:text="@string/logo_choice"
        android:textAlignment="center"
        android:textColor="@color/colorText"
        android:textSize="30sp" />


    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="310dp"
        android:layout_marginEnd="0dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/btn_rev"
        android:textAllCaps="false"
        android:textColor="@color/colorBtnText"
        android:textSize="18sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/logo"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/btn_RUB"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorLogo"
            android:fontFamily="sans-serif-medium"
            android:textOn="@string/button_RUB"
            android:textOff="@string/button_RUB"
            android:paddingStart="25dp"
            android:paddingRight="20dp"
            android:gravity="left|center_vertical"
            android:textAllCaps="false"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:drawableRight="@drawable/icon_on_off"
            tools:ignore="OnClick,RtlHardcoded,RtlSymmetry" />

        <ToggleButton
            android:id="@+id/btn_AUD"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/button_AUD"
            android:textOff="@string/button_AUD"
            android:paddingRight="20dp"
            android:background="@color/colorLogo"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:paddingStart="25dp"
            android:gravity="left|center_vertical"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:drawableRight="@drawable/icon_on_off"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ToggleButton
            android:id="@+id/btn_BRL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/button_BRL"
            android:textOff="@string/button_BRL"
            android:paddingRight="20dp"
            android:background="@color/colorLogo"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:paddingStart="25dp"
            android:textColor="@color/colorText"
            android:textSize="30sp"
            android:drawableRight="@drawable/icon_on_off"
            android:gravity="left|center_vertical"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <ToggleButton
            android:id="@+id/btn_EUR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/button_EUR"
            android:textOff="@string/button_EUR"
            android:background="@color/colorLogo"
            android:fontFamily="sans-serif-medium"
            android:textAllCaps="false"
            android:paddingRight="20dp"
            android:paddingStart="25dp"
            android:drawableRight="@drawable/icon_on_off"
            android:gravity="left|center_vertical"
            android:textSize="30sp"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

    </LinearLayout>


</RelativeLayout>